--- a/llm_processing/retrieve_food_kg.ipynb
+++ b/llm_processing/retrieve_food_kg.ipynb
@@ -3,7 +3,10 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# This notebook retrieves nourish_public_FoodKG from the SQL server and downloads it locally as a csv for convenience in future work.",
+   "source": [
+    "#### retrieve_food_kg\n",
+    "Retrieves `nourish_public_FoodKG` from the SQL server and downloads it locally as a CSV for convenient reuse."
+   ],
    "id": "5bcd2d4a58af6727"
   },
   {
