--- a/llm_processing/retrieve_usda_branded_experimental.ipynb
+++ b/llm_processing/retrieve_usda_branded_experimental.ipynb
@@ -3,7 +3,11 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# This notebook retrieves usda_2022_food_branded_experimental from the SQL server and downloads it locally as a csv for convenience in future work. This notebook saves only the columns we use for future processing.",
+   "source": [
+    "#### retrieve_usda_branded_experimental\n",
+    "Retrieves `usda_2022_food_branded_experimental` from the SQL server and downloads it locally as a CSV.\n",
+    "Only the necessary columns are retained for future processing."
+   ],
    "id": "5bcd2d4a58af6727"
   },
   {
