--- a/llm_processing/spacy_unique_ingredients.ipynb
+++ b/llm_processing/spacy_unique_ingredients.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### spacy_unique_ingredients\n",
+    "Identifies unique ingredients from spaCy-processed data, counts occurrences, and determines a cutoff that filters the dataset to roughly 100 ingredients.\n",
+    "These most common ingredients are saved to `spacy_unique_ingredients.txt` and appended to the LLM system prompt in `process_products.py`."
+   ],
+   "id": "cb99245528fd8d72"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
@@ -16,7 +26,7 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "COUNT_CUTOFF = 30000  # ingredients with less than this many occurences will be discarded"
+    "COUNT_CUTOFF = 30000  # ingredients with less than this many occurrences will be discarded"
    ],
    "outputs": [],
    "execution_count": 23
@@ -342,7 +352,10 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Calculate rought number of tokens of ingredients",
+   "source": [
+    "## Calculate rough number of tokens of ingredients\n",
+    "This section was used to approximate the number of tokens the unique ingredients would add to the LLM prompt"
+   ],
    "id": "c2026aadd0e7a61c"
   },
   {
@@ -354,21 +367,19 @@
    },
    "cell_type": "code",
    "source": [
-    "import spacy\n",
-    "\n",
-    "# Read ingredients from file\n",
-    "with open(\"../SpacyProcessing/spacy_unique_ingredients.txt\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    unique_ingredients = [line.strip() for line in f if line.strip()]\n",
-    "# Load spaCy model\n",
-    "nlp = spacy.load(\n",
-    "    \"en_core_web_sm\",\n",
-    "    disable=[\"parser\", \"ner\", \"tagger\", \"lemmatizer\", \"attribute_ruler\", \"morphologizer\"],\n",
-    ")\n",
-    "# Count tokens\n",
-    "total_tokens = 0\n",
-    "for doc in nlp.pipe(unique_ingredients, batch_size=1000):\n",
-    "    total_tokens += len(doc)\n",
-    "print(f\"Approximate total token count: {total_tokens:,}\")"
+    "# # Read ingredients from file\n",
+    "# with open(\"../SpacyProcessing/spacy_unique_ingredients.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "#     unique_ingredients = [line.strip() for line in f if line.strip()]\n",
+    "# # Load spaCy model\n",
+    "# nlp = spacy.load(\n",
+    "#     \"en_core_web_sm\",\n",
+    "#     disable=[\"parser\", \"ner\", \"tagger\", \"lemmatizer\", \"attribute_ruler\", \"morphologizer\"],\n",
+    "# )\n",
+    "# # Count tokens\n",
+    "# total_tokens = 0\n",
+    "# for doc in nlp.pipe(unique_ingredients, batch_size=1000):\n",
+    "#     total_tokens += len(doc)\n",
+    "# print(f\"Approximate total token count: {total_tokens:,}\")"
    ],
    "id": "ac669aa8eefea39a",
    "outputs": [
@@ -381,19 +392,6 @@
     }
    ],
    "execution_count": 26
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-03T05:20:10.277458Z",
-     "start_time": "2025-12-03T05:20:10.275648Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "cedcdfd7ed48bb6c",
-   "outputs": [],
-   "execution_count": null
   }
  ],
  "metadata": {
