--- a/llm_processing/test_food_kg.ipynb
+++ b/llm_processing/test_food_kg.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### test_food_kg\n",
+    "A legacy notebook for testing LLM-based FoodKG results when spaCy is not used.\n",
+    "Not actively supported due to resource constraints but included for completeness."
+   ],
+   "id": "df916f0fa8b178ce"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
