--- a/llm_processing/test_products.ipynb
+++ b/llm_processing/test_products.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### `test_products`\n",
+    "Evaluates the model’s performance using accuracy metrics and Levenshtein similarity against the test dataset."
+   ],
+   "id": "d8bd384b2b8d62d8"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
