--- a/llm_processing/retrieve_food_product.ipynb
+++ b/llm_processing/retrieve_food_product.ipynb
@@ -3,7 +3,11 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# This notebook retrieves usda_2022_branded_food_product from the SQL server and downloads it locally as a csv for convenience in future work. This notebook saves only the columns we use for future processing.",
+   "source": [
+    "#### retrieve_food_product\n",
+    "Retrieves `usda_2022_branded_food_product` from the SQL server and downloads it locally as a CSV.\n",
+    "Only the columns required for downstream processing are saved."
+   ],
    "id": "5bcd2d4a58af6727"
   },
   {
