--- a/neo4j/NEO4Jwriter.ipynb
+++ b/neo4j/NEO4Jwriter.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a35136b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +15,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2ef3c1d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +29,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "83090261",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +384,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "30142885",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +436,7 @@
     "    print('starting ingredient node creation')\n",
     "    create_ingredient_nodes(graph, ingredient_df)\n",
     "    print('starting has_ingredient node creation')\n",
-    "    create_recipe_ingredient_relationship(graph, hasIngredient_df[15790000:])\n",
+    "    create_recipe_ingredient_relationship(graph, hasIngredient_df)\n",
     "\n",
     "\n",
     "#PRODUCTS-INGREDIENTS TABLE################################################################################################\n",
@@ -535,7 +531,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "220a2a31",
    "metadata": {},
    "source": [
     "# MAIN"
@@ -544,7 +539,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "abf4e503",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +549,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7edc5bf2",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -614,7 +607,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "008c64d8",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -686,7 +678,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06030561",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +686,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0953bbe7",
    "metadata": {},
    "source": [
     "Below code provided to show steps taken to process the output csv files from Spacy and OpenAI preprocessing step and ensure csv matches expected format for the node/edge writer script. The final CSVs are already saved so no need to reexecute below code blocks"
@@ -703,7 +693,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e529e3e",
    "metadata": {},
    "source": [
     "## Process the Recipe Ingredients CSV"
@@ -712,7 +701,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "430c09af",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +797,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c2c65cd5",
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +925,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "590dd57e",
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1093,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f4afc408",
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1261,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "452b6db3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,7 +1269,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb8db154",
    "metadata": {},
    "source": [
     "## Process the products-ingredients mapping csv to rename cols and drop null vals"
@@ -1294,7 +1277,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "16809c0e",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1362,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "66daa0be",
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1505,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "8609366a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1534,7 +1514,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "20a1bb7d",
    "metadata": {},
    "outputs": [
     {
@@ -1587,7 +1566,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1601,7 +1580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
