--- a/llm_processing/test_products.ipynb
+++ b/llm_processing/test_products.ipynb
@@ -74,7 +74,7 @@
    },
    "cell_type": "code",
    "source": [
-    "pred_df = pd.read_csv(\"finalize_products/mapped_responses.csv\")\n",
+    "pred_df = pd.read_csv(\"../data/output/mapped_responses.csv\")\n",
     "pred_df.head(100)"
    ],
    "id": "ba5bab046e0665dc",
